# RgrStp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
include/Matrixlib/: Matrixlib.hpp
src/: CMakeLists.txt
src/mathlib/: CMakeLists.txt
src/sum-cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.sum.cpp
